--- a/src/pages/services/wine-cellar-repair.astro
+++ b/src/pages/services/wine-cellar-repair.astro
@@ -61,85 +61,85 @@ import "css/service/style_services.css";
         <div class="full_left_menu_r">
           <div class="list_left">
             <a href="#left-menu-1">
-              <h2>Wine Cooler Repair</h2>
+              <h2>Wine Cellar Repair</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-2">
-              <h2>Wine Cooler Types and Their Repair Needs</h2>
+              <h2>Wine Cellar Types and Their Repair Needs</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-3">
-              <h2>Common Wine Cooler Issues</h2>
+              <h2>Common Wine Cellar Issues</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-4">
-              <h2>Wine Cooler Replacement Parts</h2>
+              <h2>Wine Cellar Replacement Parts</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-5">
-              <h2>Wine Cooler Replacement Parts Costs</h2>
+              <h2>Wine Cellar Replacement Parts Costs</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-6">
-              <h2>Cost to Repair a Wine Cooler Depending on the Brand</h2>
+              <h2>Cost to Repair a Wine Cellar Depending on the Brand</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-7">
-              <h2>Wine Cooler Repair Labor Costs</h2>
+              <h2>Wine Cellar Repair Labor Costs</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-8">
-              <h2>Wine Cooler Repair Costs - Labor Only Excluding Parts</h2>
+              <h2>Wine Cellar Repair Cost - Labor Only Excluding Parts</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-9">
-              <h2>Ways to Save Money on Wine Cooler Repair</h2>
+              <h2>Ways to Save Money on Wine Cellar Repair</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-10">
-              <h2>Wine Cooler Maintenance</h2>
+              <h2>Wine Cellar Maintenance</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-11">
-              <h2>How to Decide Whether to Repair or Replace a Wine Cooler</h2>
+              <h2>How to Decide Whether to Repair or Replace a Wine Cellar</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-12">
-              <h2>Same Day Appliance Repair at Your Service</h2>
+              <h2>Same Day Wine Cellar Repair at Your Service</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-13">
-              <h2>How Much Does It Cost to Repair a Wine Cooler?</h2>
+              <h2>How Much Does It Cost to Repair a Wine Cellar?</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-14">
-              <h2>Our Pricing Policy for Wine Cooler Repair and How We Work</h2>
+              <h2>Our Pricing Policy for Wine Cellar Repairs and How We Work</h2>
             </a>
           </div>
 
@@ -1131,7 +1131,7 @@ import "css/service/style_services.css";
                       <p><b>Timely maintenance</b></p>
                     </div>
                     <p>
-                      - Regular maintenance can help prevent costly repairs and extend the life of your wine cellar. Our service offers a flat fee of <b>$80</b> for comprehensive wine cellar maintenance. This includes professional cleaning of the cooling system, inspection and cleaning of the drain lines, and checking the integrity of the insulation and seals. Regular maintenance helps prevent potential issues and ensures your wine cellar operates efficiently for years to come.
+                      - Regular maintenance can help prevent costly repairs and extend the life of your wine cellar. Our service offers a flat fee of $80 for comprehensive wine cellar maintenance. This includes professional cleaning of the cooling system, inspection and cleaning of the drain lines, and checking the integrity of the insulation and seals. Regular maintenance helps prevent potential issues and ensures your wine cellar operates efficiently for years to come.
                     </p>
                   </div>
 
@@ -1608,8 +1608,8 @@ import "css/service/style_services.css";
                 </div>
               </div>
 
-              <div class="content__page-desc">
-                <b>Contact Us Today!</b>
+              <div class="content__page-desc" style="margin-top: 15px;">
+                <b >Contact Us Today!</b>
                 <p>For reliable, same-day wine cellar repair and maintenance, trust Same Day Wine Cellar Repair. Call us to schedule an appointment or to get more information about our services. Your satisfaction is our top priority!</p>
               </div>
 
