--- a/src/pages/services/wine-cellar-repair.astro
+++ b/src/pages/services/wine-cellar-repair.astro
@@ -20,7 +20,7 @@ import "css/service/style_services.css";
   <Container>
     <main>
       <div class="page-header">
-        <div class="page-header-d-full wine-cooler-page-header-d-full">
+        <div class="page-header-d-full wine-cellar-page-header-d-full">
           <div class="page-header-d">
             <h1>
               <span class="animate-charcter">Wine Cellar <br />Repair</span>
@@ -31,7 +31,7 @@ import "css/service/style_services.css";
 
         <div class="page-header-f">
           <img
-            src="/commercial-wine-cooler/wine-cooler-page_header_photos.webp"
+            src="/wine-сellar/wine-сellar-page_header_photos.webp"
             alt="Wine Cellar Repair"
             loading="lazy"
           />
