--- a/src/pages/services/showcase-refrigerator-repair.astro
+++ b/src/pages/services/showcase-refrigerator-repair.astro
@@ -828,7 +828,7 @@ import "css/service/style_services.css";
                 </div>
 
                 <div class="desc-logo-brand logo-bran-d-19">
-                  <h3><a href="#">Summit Appliance</a></h3>
+                  <h3><a href="#">Summit</a></h3>
                 </div>
 
                 <div class="desc-logo-brand logo-bran-d-20">
