--- a/src/pages/services/showcase-refrigerator-repair.astro
+++ b/src/pages/services/showcase-refrigerator-repair.astro
@@ -866,8 +866,7 @@ import "css/service/style_services.css";
                 </p>
               </div>
 
-              <div class="content__page-desc">
-
+              <div class="content__page-desc ">
                 <h3>Common Factors Affecting Repair Costs</h3>
                 <ol>
                   <li>
@@ -900,9 +899,9 @@ import "css/service/style_services.css";
                 </ol>
               </div>
 
-              <div class="content__page-desc">
+              <div class="content__page-desc column3-content__page-desc">
                 <h3>Estimated Labor Costs by Repair Type</h3>
-                <ol>
+                <ul>
                   <li>
                     <b>Minor Repairs:</b>
                     <ul>
@@ -924,9 +923,8 @@ import "css/service/style_services.css";
                       <li>Estimated Labor Cost: $300 to $1,200</li>
                     </ul>
                   </li>
-                </ol>
+                </ul>
               </div>
-
 
               <div class="content__page-desc">
                 <h3>Additional Considerations</h3>
@@ -962,8 +960,7 @@ import "css/service/style_services.css";
 
                 <p>Commercial showcase refrigerator repair costs can vary, but understanding the factors involved can help you budget appropriately. Always consult with a professional technician to get a precise estimate tailored to your specific needs.</p>
               </div>
-              
-              </div>
+           
             </div>
             <Btn />
           </div>
