--- a/src/css/service/style_services.css
+++ b/src/css/service/style_services.css
@@ -53,6 +53,7 @@ h1 {
     font-size: clamp(35px, 7vw, 60px);
     line-height: clamp(56px, 8vh, 60px);
     font-weight: 900;
+    white-space: nowrap;
 }
 
 
@@ -89,10 +90,10 @@ main {
     padding: 10% 0;
 }
 
-.washer-page-header-d-full {
+/* .washer-page-header-d-full {
     padding-top: clamp(5%, 8vh, 10%);
     padding-bottom: clamp(3%, 5vh, 10%);
-}
+} */
 
 .furnace-page-header-d-full .page-header-d {
     width: 45%;
@@ -294,7 +295,7 @@ main {
     }
 
     .open-full_left.menu-LeftOpen {
-        left: 249px;
+        left: 244px;
         transition: 0.5s;
     }
 
@@ -1542,7 +1543,7 @@ main {
     .wine-cooler-page-header-d-full,
     .wine-cellar-page-header-d-full {
         padding-top: clamp(5%, 8vh, 10%);
-        padding-bottom: clamp(3%, 5vh, 10%);
+        padding-bottom: clamp(3%, 3vh, 10%);
     }
 
     .wine-cooler-page-header-d-full .page-header-d,
@@ -1569,7 +1570,7 @@ main {
         padding: 5% 0;
     }
 
-    .washer-page-header-d-full,
+    /* .washer-page-header-d-full, */
     .wine-cooler-page-header-d-full,
     .wine-cellar-page-header-d-full {
         padding-top: clamp(2%, 2vh, 10%);
@@ -1667,6 +1668,10 @@ main {
 
     .page-header-d h1 {
         margin-bottom: 0;
+    }
+
+    .animate-charcter {
+        white-space: wrap;
     }
 
     .page-header-f img {
