--- a/src/pages/services/walk-in-cooler-repair.astro
+++ b/src/pages/services/walk-in-cooler-repair.astro
@@ -596,8 +596,8 @@ import "css/service/style_services.css";
                     <img
                       width="300px"
                       height="300px"
-                      src="/brand-logos/norlake.webp"
-                      alt="Norlake"
+                      src="/brand-logos/nor-lake.webp"
+                      alt="Nor-lake"
                     />
                   </a>
                 </div>
@@ -717,7 +717,7 @@ import "css/service/style_services.css";
                     <img
                       width="300px"
                       height="300px"
-                      src="/brand-logos/thermalrite.webp"
+                      src="/brand-logos/thermalRite.webp"
                       alt="ThermalRite"
                     />
                   </a>
