--- a/src/pages/services/walk-in-freezer-repair.astro
+++ b/src/pages/services/walk-in-freezer-repair.astro
@@ -62,67 +62,67 @@ import "css/service/style_services.css";
 
           <div class="list_left">
             <a href="#left-menu-1">
-              <h2>Walk-in Cooler Repair</h2>
+              <h2>Walk-in Freezer Repair</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-2">
-              <h2>Commercial Cooler Types and Their Repair Needs</h2>
+              <h2>Commercial Freezer Types and Their Repair Needs</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-3">
-              <h2>Common Walk-in Cooler Issues</h2>
+              <h2>Common Commercial Freezer Issues</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-4">
-              <h2>Walk-in Cooler Replacement Parts</h2>
+              <h2>Commercial Freezer Replacement Parts</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-5">
-              <h2>Walk-in Cooler Replacement Parts Costs</h2>
+              <h2>Commercial Walk-in Freezer Replacement Parts Cost</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-6">
-              <h2>Cost to Repair a Commercial Walk-in Cooler Depending on the Brand</h2>
+              <h2>Cost to Repair a Commercial Walk-in Freezer Depending on the Brand</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-7">
-              <h2>Commercial Walk-in Cooler Repair Labor Costs</h2>
+              <h2>Commercial Walk-in Freezer Repair Labor Costs</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-8">
-              <h2>Commercial Walk-in Cooler Repair Cost - Labor Only Excluding Parts</h2>
+              <h2>Commercial Walk-in Freezer Repair Cost - Labor Only Excluding Parts</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-9">
-              <h2>Tips for Saving Money on Commercial Walk-In Cooler Repair</h2>
+              <h2>Ways to Save Money on Commercial Walk-In Freezer Repair</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-10">
-              <h2>Commercial Walk-in Cooler Maintenance</h2>
+              <h2>Commercial Walk-in Freezer Maintenance</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-11">
-              <h2>How to Decide Whether to Repair or Replace a Walk-in Cooler</h2>
+              <h2>How to Decide Whether to Repair or Replace a Commercial Walk-in Freezer</h2>
             </a>
           </div>
 
@@ -134,24 +134,18 @@ import "css/service/style_services.css";
 
           <div class="list_left">
             <a href="#left-menu-13">
-              <h2>How Much Does It Cost To Repair a Walk-in Cooler?</h2>
+              <h2>How Much Does It Cost to Repair a Commercial Walk-In Freezer?</h2>
             </a>
           </div>
           
           <div class="list_left">
             <a href="#left-menu-14">
-              <h2>Our Pricing Policy For Walk-in Cooler Repair And How We Work</h2>
+              <h2>Our Pricing Policy for Commercial Walk-In Freezer Repair and How We Work</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-15">
-              <h2>What is Included in the Annual/Semi-annual Walk-in Cooler Maintenance</h2>
-            </a>
-          </div>
-
-          <div class="list_left">
-            <a href="#left-menu-16">
               <h2>FAQs</h2>
             </a>
           </div>
@@ -920,11 +914,11 @@ import "css/service/style_services.css";
                 </ol>
 
                 <b>Example Scenarios</b>
-                <ol>
+                <ul>
                   <li><b>Simple Repair in an Urban Area: </b> Replacing a thermostat: 1 hour of labor at $125/hour + $100 part = $225.</li>
                   <li><b>Moderate Repair in a Rural Area: </b>Fixing a refrigerant leak: 4 hours of labor at $85/hour + $300 for refrigerant and parts = $640.</li>
                   <li><b>Complex Repair in an Urban Area: </b>Replacing a compressor: 6 hours of labor at $150/hour + $1,500 for the compressor and parts = $2,400.</li>
-                </ol>
+                </ul>
 
                 <p>Labor costs for repairing a commercial walk-in freezer can vary widely based on the complexity of the repair, geographic location, and technician expertise. It’s advisable to get multiple quotes and consider service contracts to manage these expenses effectively. Always ensure that the chosen technician is certified and experienced to guarantee the quality and reliability of the repair.</p>
               </div>
@@ -1526,105 +1520,6 @@ import "css/service/style_services.css";
           </div>
 
           <div class="page213-content" id="left-menu-15">
-            <div class="content__page-full-hed">
-              <div class="content__page-hed-h">
-                <h2>
-                  What is Included in the Annual/Semi-annual Walk-in Cooler Maintenance
-                </h2>
-              </div>
-              <div class="content__page-hed-desc">
-              </div>
-            </div>
-
-            <div class="content__page-full-desc">
-
-              <div class="content__page-desc">
-                <h3>Annual Maintenance</h3>
-                <ol>
-                  <li>
-                    <b>Cleaning</b>
-                    <ul>
-                      <li>Removing dirt and debris from evaporator and condenser coils to ensure efficient heat exchange.</li>
-                      <li>Clearing drain pans and lines to prevent water overflow and mold growth.</li>
-                      <li>Sanitizing interior surfaces, including walls, floors, and ceilings, to maintain hygiene and prevent contamination.</li>
-                    </ul>
-                  </li>
-                  <li>
-                    <b>Inspecting and Testing</b>
-                    <ul>
-                      <li>Checking door seals and hinges for proper sealing and alignment to prevent air leaks.</li>
-                      <li>Verifying refrigerant levels and looking for signs of leaks to ensure the system is operating efficiently.</li>
-                      <li>Calibrating the thermostat to maintain correct temperature settings.</li>
-                      <li>Examining all electrical connections for signs of wear or corrosion and tightening as necessary.</li>
-                    </ul>
-                  </li>
-                  <li>
-                    <b>Replacing</b>
-                    <ul>
-                      <li>Changing air filters to maintain air quality and flow.</li>
-                      <li>Replacing any defective light bulbs and cleaning fixtures to ensure adequate visibility.</li>
-                    </ul>
-                  </li>
-                  <li>
-                    <b>Lubricating</b>
-                    <ul>
-                      <li>Applying lubricant to fans and motors to reduce friction and wear</li>
-                    </ul>
-                  </li>
-                  <li>
-                    <b>Conducting Safety Checks</b>
-                    <ul>
-                      <li>Testing control systems and alarms for proper functionality.</li>
-                      <li>Ensuring that emergency exits are clearly marked and unobstructed.</li>
-                    </ul>
-                  </li>
-                </ol>
-
-                <h3>Semi-annual Maintenance</h3>
-                <ol>
-                  <li>
-                    <b>Inspecting</b>
-                    <ul>
-                      <li>Conducting more frequent inspections of condenser and evaporator coils for any buildup.</li>
-                      <li>Examining door gaskets for any signs of damage or warping that could impair sealing.</li>
-                    </ul>
-                  </li>
-                  <li>
-                    <b>Monitoring</b>
-                    <ul>
-                      <li>Observing fan and motor operation to identify potential issues early.</li>
-                    </ul>
-                  </li>
-                  <li>
-                    <b>Calibrating</b>
-                    <ul>
-                      <li>Adjusting the thermostat as needed to ensure it accurately controls the temperature.</li>
-                    </ul>
-                  </li>
-                  <li>
-                    <b>Maintaining</b>
-                    <ul>
-                      <li>Keeping drain lines clear to prevent potential blockages and water damage.</li>
-                    </ul>
-                  </li>
-                </ol>
-
-                <h3>Additional Considerations</h3>
-                <ul>
-                  <li>Performing Energy Efficiency Audits: Identifying opportunities to reduce energy consumption.</li>
-                  <li>Reviewing Operational Practices: Adjusting maintenance schedules based on usage patterns.</li>
-                  <li>Providing Professional Assessments: Offering expert advice on potential upgrades or replacements that might be needed.</li>
-                </ul>
-
-                <p>By engaging in these practices, a professional technician ensures that the walk-in cooler maintains its performance, safety, and energy efficiency, reducing the likelihood of downtime and costly emergency repairs.</p>
-
-              </div>
-             
-            </div>
-            <Btn />
-          </div>
-
-          <div class="page213-content" id="left-menu-16">
             <div class="content__page-full-hed">
               <div class="content__page-hed-h">
                 <h2>FAQs</h2>
