--- a/src/pages/services/oven-repair.astro
+++ b/src/pages/services/oven-repair.astro
@@ -877,7 +877,7 @@ import "css/service/style_services.css";
               </div>
 
               <div class="full-desc-logo-brand">
-                <p>Brands of microwaves we repair</p>
+                <p>Brands of Oven we repair</p>
 
                 <div class="desc-logo-brand logo-bran-d-1">
                   <h3><a href="#">General Electric</a></h3>
