--- a/src/pages/services/stove-repair.astro
+++ b/src/pages/services/stove-repair.astro
@@ -886,7 +886,7 @@ import "css/service/style_services.css";
               </div>
 
               <div class="full-desc-logo-brand">
-                <p>Brands of microwaves we repair</p>
+                <p>Brands of Stove we repair</p>
 
                 <div class="desc-logo-brand logo-bran-d-1">
                   <h3><a href="#">Whirlpool</a></h3>
