--- a/src/pages/services/dishwasher-repair.astro
+++ b/src/pages/services/dishwasher-repair.astro
@@ -1147,7 +1147,7 @@ import "css/service/style_services.css";
               </div>
 
               <div class="full-desc-logo-brand">
-                <p>Brands of microwaves we repair</p>
+                <p>Brands of Dishwasher we repair</p>
 
                 <div class="desc-logo-brand logo-bran-d-1">
                   <h3><a href="#">Bosch</a></h3>
