--- a/src/pages/services/dryer-repair.astro
+++ b/src/pages/services/dryer-repair.astro
@@ -695,7 +695,7 @@ import "css/service/style_services.css";
               </div>
 
               <div class="full-desc-logo-brand">
-                <p>Brands of microwaves we repair</p>
+                <p>Brands of Dryer we repair</p>
 
                 <div class="desc-logo-brand logo-bran-d-1">
                   <h3><a href="#">Whirlpool</a></h3>
