--- a/src/pages/services/furnace-repair.astro
+++ b/src/pages/services/furnace-repair.astro
@@ -928,7 +928,7 @@ import "css/service/style_services.css";
               </div>
 
               <div class="full-desc-logo-brand">
-                <p>Brands of microwaves we repair</p>
+                <p>Brands of Furnace we repair</p>
 
                 <div class="desc-logo-brand logo-bran-d-1">
                   <h3><a href="#">Carrier</a></h3>
