--- a/src/pages/services/microwave-repair.astro
+++ b/src/pages/services/microwave-repair.astro
@@ -912,7 +912,7 @@ import "css/service/style_services.css";
               </div>
 
               <div class="full-desc-logo-brand">
-                <p>Brands of microwaves we repair</p>
+                <p>Brands of Microwave we repair</p>
 
                 <div class="desc-logo-brand logo-bran-d-1">
                   <h3><a href="#">Panasonic</a></h3>
