--- a/src/pages/services/walk-in-freezer-repair.astro
+++ b/src/pages/services/walk-in-freezer-repair.astro
@@ -735,7 +735,7 @@ import "css/service/style_services.css";
                     <img
                       width="300px"
                       height="300px"
-                      src="/brand-logos/crownTonka.webp"
+                      src="/brand-logos/crowntonka.webp"
                       alt="CrownTonka"
                     />
                   </a>
